Using only specific set of dependencies from XLR jars